Bug 465143 - crash after logging in
Summary: crash after logging in
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: drkonqi
: 463314 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-01 20:09 UTC by Mariusz Libera
Modified: 2023-03-06 19:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (2.44 KB, text/plain)
2023-02-18 17:36 UTC, Oleg Girko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mariusz Libera 2023-02-01 20:09:42 UTC
Application: neochat (23.01)

Qt Version: 5.15.8
Frameworks Version: 5.102.0
Operating System: Linux 6.1.8-arch1-1 x86_64
Windowing System: X11
Distribution: "Arch Linux"
DrKonqi: 5.26.90 [KCrashBackend]

-- Information about the crash:
neochat crashed after logging in

Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.8-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 19.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 81BF
System Version: Lenovo ideapad 520-15IKB

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: NeoChat (neochat), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  0x00007f9081127b54 in Quotient::Room::id() const () from /usr/lib/libQuotient.so.0.7
#7  0x00005632eb6f3205 in Controller::handleNotifications(QPointer<Quotient::Connection>)::{lambda()#1}::operator()() const () at /usr/src/debug/neochat/neochat-23.01.0/src/controller.cpp:168
#8  0x00007f907f6be931 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#9  doActivate<false> (sender=0x5632edbff8c0, signal_index=10, argv=0x7ffe75d45b00) at kernel/qobject.cpp:3923
#10 0x00007f90810fd4e7 in Quotient::BaseJob::success(Quotient::BaseJob*) () from /usr/lib/libQuotient.so.0.7
#11 0x00007f908117a6c5 in Quotient::BaseJob::finishJob() () from /usr/lib/libQuotient.so.0.7
#12 0x00007f907f6be931 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#13 doActivate<false> (sender=0x5632ef030970, signal_index=10, argv=0x7ffe75d45c60) at kernel/qobject.cpp:3923
#14 0x00007f9080bbb6b8 in QNetworkReplyHttpImplPrivate::finished (this=0x5632edc8ca20) at access/qnetworkreplyhttpimpl.cpp:2280
#15 0x00007f907f6b1a70 in QObject::event (this=0x5632ef030970, e=0x7f900c1a0420) at kernel/qobject.cpp:1347
#16 0x00007f9080378b5c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5632ef030970, e=0x7f900c1a0420) at kernel/qapplication.cpp:3640
#17 0x00007f907f68de08 in QCoreApplication::notifyInternal2 (receiver=0x5632ef030970, event=0x7f900c1a0420) at kernel/qcoreapplication.cpp:1064
#18 0x00007f907f68e913 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5632ecef5ef0) at kernel/qcoreapplication.cpp:1821
#19 0x00007f907f6d4d48 in postEventSourceDispatch (s=0x5632ed0c6280) at kernel/qeventdispatcher_glib.cpp:277
#20 0x00007f907ebec82b in g_main_dispatch (context=0x7f9074005010) at ../glib/glib/gmain.c:3454
#21 g_main_context_dispatch (context=0x7f9074005010) at ../glib/glib/gmain.c:4172
#22 0x00007f907ec43cc9 in g_main_context_iterate.constprop.0 (context=0x7f9074005010, block=1, dispatch=1, self=<optimized out>) at ../glib/glib/gmain.c:4248
#23 0x00007f907ebeb0e2 in g_main_context_iteration (context=0x7f9074005010, may_block=1) at ../glib/glib/gmain.c:4313
#24 0x00007f907f6d8b2c in QEventDispatcherGlib::processEvents (this=0x5632ed0c1d20, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#25 0x00007f907f6865ac in QEventLoop::exec (this=0x7ffe75d46170, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#26 0x00007f907f6910d9 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#27 0x00007f907fb39fe2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1870
#28 0x00007f9080376f2a in QApplication::exec () at kernel/qapplication.cpp:2832
#29 0x00005632eb64ed75 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/neochat/neochat-23.01.0/src/main.cpp:332
[Inferior 1 (process 279620) detached]

The reporter indicates this bug may be a duplicate of or related to bug 460830.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-02-15 22:09:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/800
Comment 2 Tobias Fella 2023-02-15 23:57:21 UTC
Git commit 9df534c72c5d0bbfa8fd31bf496763d9f59ddfcd by Tobias Fella.
Committed on 15/02/2023 at 23:30.
Pushed by tfella into branch 'master'.

Check if connection is null when handling notifications

M  +3    -1    src/controller.cpp

https://invent.kde.org/network/neochat/commit/9df534c72c5d0bbfa8fd31bf496763d9f59ddfcd
Comment 3 Oleg Girko 2023-02-18 17:36:18 UTC
Created attachment 156448 [details]
New crash information added by DrKonqi

neochat (23.01) using Qt 5.15.8

Crash happening after logging in and then opening settings without selecting a room. Opening settings when a room is selected doesn not cause crash.

-- Backtrace (Reduced):
#4  0x00007f76634fd534 in Quotient::Room::id() const () from /lib64/libQuotient.so.0.7
#5  0x000055d86935845b in Controller::handleNotifications(QPointer<Quotient::Connection>)::{lambda()#1}::operator()() const ()
#6  0x00007f76618d0e96 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#7  0x00007f76634bf7d6 in Quotient::BaseJob::success(Quotient::BaseJob*) () from /lib64/libQuotient.so.0.7
#8  0x00007f76635546a1 in Quotient::BaseJob::finishJob() () from /lib64/libQuotient.so.0.7
Comment 4 Tobias Fella 2023-03-06 19:51:05 UTC
*** Bug 463314 has been marked as a duplicate of this bug. ***