Check if connection is null when handling notifications

BUG: 465143